# Dge-Advisor

./: .env.example  .gitignore  README.md  deploy_all_to_local_docker.sh  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  start_api.sh
data/md/: Abu Dhabi Procurement Standards.md  Document Q&A Examplary Questions.md  HR Bylaws.md  Inforamation Security.md  Procurement Manual (Ariba Aligned).md  Procurement Manual (Business Process).md
docker/: Dockerfile  docker-compose.yml  requirements-slim.txt
docker/scripts/: init-db.sql  pgadmin-servers.json
docs/: Presentation.md  Presentation_ppt.pptx
docs/diagram_sources/: Crewai.mmd  Crewai_orchestration_layer.mmd  ingestion_workflow.mmd  overall_layers_detailed.mmd
docs/diagrams/: Architecture_Diagrams.md
src/agents/: agents.yaml  crew.py  tasks.yaml
src/agents/tools/: conversation.py  reranker.py  retriever_reranker.py
src/api/: request_response.py  service.py
src/config/: __init__.py  config.py  config_rag.py
src/indexer/: ingester.py  md_converter.py
src/indexer/db/: __init__.py  db_admin.py
src/indexer/loaders/: __init__.py  doc_loader.py
src/retriever/: __init__.py  retriever.py
tests/: client_chat_completion.py  test_guardrail_agent.py  test_one_conversation.py  test_policycrew.py  test_retriever.py
tests/retriever/: conversational_test_cases.json  evaluate_conversational_context.py  evaluate_rag_accuracy.py  ragas_ground_truth.json
tests/retriever/results/: Evaluate_rag_accuracy_result.md  Optimization_summary.md
